Adds styling for in-the-news page

--- a/in-the-news.html
+++ b/in-the-news.html
@@ -708,10 +708,12 @@
                 </a>
               </td>
               <td>
-                <div class="news-name">Cognitea</div>
-                <div class="news-title">
-                  What 3 Kick Ass Climbers Can Teach You About Building a Community
-                </div>
+                <a href="http://cognitea.com/blogs/the-stories/14082765-what-3-kick-ass-climbers-can-teach-you-about-building-a-community" target="_blank">
+                  <div class="news-name">Cognitea</div>
+                  <div class="news-title">
+                    What 3 Kick Ass Climbers Can Teach You About Building a Community
+                  </div>
+                </a>
               </td>
             </tr>
             <tr>
@@ -721,10 +723,12 @@
                 </a>
               </td>
               <td>
-                <div class="news-name">Iron Maiden</div>
-                <div class="news-title">
-                  Iron Maiden 2014 Highlights Video
-                </div>
+                <a href="https://vimeo.com/90697922" target="_blank">
+                  <div class="news-name">Iron Maiden</div>
+                  <div class="news-title">
+                    Iron Maiden 2014 Highlights Video
+                  </div>
+                </a>
               </td>
             </tr>
             <tr>
@@ -734,10 +738,12 @@
                 </a>
               </td>
               <td>
-                <div class="news-name">Boston Metro</div>
-                <div class="news-title">
-                  Rock climbing women call for a Boston-area community of female climbers
-                </div>
+                <a href="http://www.metro.us/local/rock-climbing-women-call-for-a-boston-area-community-of-female-climbers-metro-us/tmWmiC---03C5R8QVZtLVo/" target="_blank">
+                  <div class="news-name">Boston Metro</div>
+                  <div class="news-title">
+                    Rock climbing women call for a Boston-area community of female climbers
+                  </div>
+                </a>
               </td>
             </tr>
             <tr>
@@ -747,10 +753,12 @@
                 </a>
               </td>
               <td>
-                <div class="news-name">GrindTV.com</div>
-                <div class="news-title">
-                  Do rock climbers need to wear more clothes?
-                </div>
+                <a href="#">
+                  <div class="news-name">GrindTV.com</div>
+                  <div class="news-title">
+                    Do rock climbers need to wear more clothes?
+                  </div>
+                </a>
               </td>
             </tr>
             <tr>
@@ -760,11 +768,13 @@
                 </a>
               </td>
               <td>
-                <div class="news-name">Reych, Zofia (2013)</div>
-                <div class="news-title">
-                  Climbing Women and Niche Media: Beyond alternative femininities
-                  MA Thesis at The University of London.
-                </div>
+                <a href="#">
+                  <div class="news-name">Reych, Zofia (2013)</div>
+                  <div class="news-title">
+                    Climbing Women and Niche Media: Beyond alternative femininities
+                    MA Thesis at The University of London.
+                  </div>
+                </a>
               </td>
             </tr>
           </table>
@@ -776,10 +786,12 @@
                 </a>
               </div>
               <div class="col-xs-12">
-                <div class="news-name">Cognitea</div>
-                <div class="news-title">
-                  What 3 Kick Ass Climbers Can Teach You About Building a Community
-                </div>
+                <a href="http://cognitea.com/blogs/the-stories/14082765-what-3-kick-ass-climbers-can-teach-you-about-building-a-community" target="_blank">
+                  <div class="news-name">Cognitea</div>
+                  <div class="news-title">
+                    What 3 Kick Ass Climbers Can Teach You About Building a Community
+                  </div>
+                </a>
               </div>
               <hr />
               <div class="col-xs-12">
@@ -788,10 +800,12 @@
                 </a>
               </div>
               <div class="col-xs-12">
-                <div class="news-name">Iron Maiden</div>
-                <div class="news-title">
-                  Iron Maiden 2014 Highlights Video
-                </div>
+                <a href="https://vimeo.com/90697922" target="_blank">
+                  <div class="news-name">Iron Maiden</div>
+                  <div class="news-title">
+                    Iron Maiden 2014 Highlights Video
+                  </div>
+                </a>
               </div>
               <hr />
               <div class="col-xs-12">
@@ -800,10 +814,12 @@
                 </a>
               </div>
               <div class="col-xs-12">
-                <div class="news-name">Boston Metro</div>
-                <div class="news-title">
-                  Rock climbing women call for a Boston-area community of female climbers
-                </div>
+                <a href="http://www.metro.us/local/rock-climbing-women-call-for-a-boston-area-community-of-female-climbers-metro-us/tmWmiC---03C5R8QVZtLVo/" target="_blank">
+                  <div class="news-name">Boston Metro</div>
+                  <div class="news-title">
+                    Rock climbing women call for a Boston-area community of female climbers
+                  </div>
+                </a>
               </div>
               <hr />
               <div class="col-xs-12">
@@ -812,10 +828,12 @@
                 </a>
               </div>
               <div class="col-xs-12">
-                <div class="news-name">GrindTV.com</div>
-                <div class="news-title">
-                  Do rock climbers need to wear more clothes?
-                </div>
+                <a href="#">
+                  <div class="news-name">GrindTV.com</div>
+                  <div class="news-title">
+                    Do rock climbers need to wear more clothes?
+                  </div>
+                </a>
               </div>
               <hr />
               <div class="col-xs-12">
@@ -824,11 +842,13 @@
                 </a>
               </div>
               <div class="col-xs-12">
-                <div class="news-name">Reych, Zofia (2013)</div>
-                <div class="news-title">
-                  Climbing Women and Niche Media: Beyond alternative femininities
-                  MA Thesis at The University of London.
-                </div>
+                <a href="#">
+                  <div class="news-name">Reych, Zofia (2013)</div>
+                  <div class="news-title">
+                    Climbing Women and Niche Media: Beyond alternative femininities
+                    MA Thesis at The University of London.
+                  </div>
+                </a>
               </div>
             </div>
           </div>
