--- a/category.html
+++ b/category.html
@@ -847,7 +847,7 @@
           </div>
           <div class="widget">
             <h4>Join our Mailing List</h4>
-            <p>Keep up-to-date with the latest news, and we'll <strong>send you a discount for the course!</strong></p>
+            <p>Keep up-to-date with the latest news!</p>
             <button class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#myModal">
               Subscribe
             </button>
